tests/typing/bad/testfile-extends-4.scala

class C extends Int {}
object Main { def main(args: Array[String]) { } }
